[tool.poetry]
name = "flet-demo"
version = "0.1.0"
description = ""
authors = ["pythoninthegrass <4097471+pythoninthegrass@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flet_demo"}]

[tool.poetry.dependencies]
python = "3.10.8"
flet = "^0.1.65"
python-decouple = "^3.6"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
